Swagger doc changed, price checker added and repository abstraction from cache and client methods
