# src/storage/api-docs/api-docs.json
@@ -286,8 +286,30 @@
                         "description": "List of items in the order",
                         "type": "array",
                         "items": {
-                            "$ref": "#/components/schemas/CartItemDTO"
-                        }
+                            "properties": {
+                                "product_id": {
+                                    "type": "integer",
+                                    "example": 101
+                                },
+                                "quantity": {
+                                    "type": "integer",
+                                    "example": 2
+                                },
+                                "unit_price": {
+                                    "type": "number",
+                                    "format": "float",
+                                    "example": 99.99
+                                }
+                            },
+                            "type": "object"
+                        },
+                        "example": [
+                            {
+                                "product_id": 101,
+                                "quantity": 1,
+                                "unit_price": 120.75
+                            }
+                        ]
                     }
                 },
                 "type": "object"
@@ -304,7 +326,12 @@
                         "type": "array",
                         "items": {
                             "type": "integer"
-                        }
+                        },
+                        "example": [
+                            1,
+                            2,
+                            3
+                        ]
                     }
                 },
                 "type": "object"
